# PickAndPaintExtension

./: CMakeLists.txt  README.md
PickAndPaint/: CMakeLists.txt  PickAndPaint.py  PickAndPaintLogic.py
PickAndPaint/Resources/UI/: PickAndPaint.ui
